# collector

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  AGENTS.md  CLAUDE.md  README.md  app.py  app_factory.py  capture_screenshots.py  config.py  coverage.json  pyproject.toml  run_dev.py  scraper.db  session_manager.py  wsgi.py
.claude/: settings.local.json
.github/workflows/: lint.yml  test.yml  validate-config.yml
config/: database.py  settings.py
db/: __init__.py  repository.py
docs/: PRD.md  PRETTIER_SETUP.md
models/: AGENTS.md  base.py  file.py  job.py  settings.py
plans/: 01-magic-values-extraction.md  02-route-documentation.md  03-variable-naming-improvement.md  04-route-integration-testing.md  05-database-indexes.md  06-ci-cd-pipeline.md
repositories/: base.py  file_repository.py  job_repository.py  settings_repository.py
routes/: AGENTS.md  __init__.py  api.py  jobs.py  pages.py  sessions.py
scrapers/: __init__.py  base_scraper.py  instagram_scraper.py  youtube_scraper.py
scripts/: capture_after_screenshots.py  capture_screenshots.py  copy_agents_to_claude.py
security/: __init__.py  csrf.py  paths.py
services/: job_service.py  scraper_service.py  session_manager.py  session_service.py
src/collector/: __init__.py  __main__.py
src/collector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/collector/config/: AGENTS.md  __init__.py  database.py  settings.py
src/collector/models/: AGENTS.md  CLAUDE.md  __init__.py  base.py  file.py  job.py  settings.py
src/collector/repositories/: AGENTS.md  __init__.py  base.py  file_repository.py  job_repository.py  settings_repository.py
src/collector/routes/: AGENTS.md  api.py  jobs.py  pages.py  sessions.py
src/collector/scrapers/: AGENTS.md  __init__.py  base_scraper.py  instagram_scraper.py  youtube_scraper.py
src/collector/security/: csrf.py  (+2 more)
templates/: base.html  browse.html  dashboard.html  error.html  history.html  preview.html  sessions.html
templates/partials/: active_jobs.html  job_card.html  progress_bar.html
tests/: __init__.py  conftest.py  test_api_routes.py  test_config.py  test_instagram_scraper.py  test_job_service.py  test_jobs_routes.py  test_pages_routes.py  test_route_documentation.py  test_scraper_service.py  test_session_service.py  test_sessions_routes.py  test_youtube_scraper.py
tests/integration/: test_database_indexes.py
(+18 files in other folders)
