[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "collector"
version = "2.0.0"
description = "Instagram + YouTube content scraper with Flask web interface"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "flask-executor>=1.0.0",
    "instaloader>=4.15.0",
    "gallery-dl>=1.25.0",
    "yt-dlp>=2023.12.0",
    "youtube-transcript-api>=1.2.4",
    "cryptography>=41.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "ty>=0.0.17",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
# Like Black, use double quotes for strings
quote-style = "double"
# Like Black, indent with spaces
indent-style = "space"
# Like Black, respect magic trailing commas
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ty]
# Extremely fast Python type checker (10-100x faster than mypy/Pyright)
# Docs: https://docs.astral.sh/ty/

[tool.ty.environment]
# Auto-detected from pyproject.toml
python-version = "3.10"

[tool.ty.src]
include = ["src", "tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
collector = [
    "templates/**/*",
    "static/**/*",
]
